samples/_failures_safe/1761635873_72e997_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3271025.c: In function ‘main’:
./samples/SAFE/__tmp_d3271025.c:155:20: error: expected ‘)’ at end of input
  155 |         add_edge(&g
      |                 ~  ^
      |                    )
./samples/SAFE/__tmp_d3271025.c:155:9: error: too few arguments to function ‘add_edge’
  155 |         add_edge(&g
      |         ^~~~~~~~
./samples/SAFE/__tmp_d3271025.c:30:6: note: declared here
   30 | void add_edge(Graph *g, int from, int to, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_d3271025.c:155:9: error: expected declaration or statement at end of input
  155 |         add_edge(&g
      |         ^~~~~~~~
./samples/SAFE/__tmp_d3271025.c:155:9: error: expected declaration or statement at end of input
